"amco highlights" text fix on mobile

--- a/amco/css/stylev2.css
+++ b/amco/css/stylev2.css
@@ -534,7 +534,7 @@ a{
         border-radius: 2vw;
     }
     #content h2{
-        font-size: 10vw;
+        font-size: 10vw !important;
     }
 
     .playing {
